Archetype fix